# hex

./: Cargo.toml  README.md  recursive_stream.md
src/: cli_client.rs  io.rs  main.rs  tool.rs
src/client/: cli_client.rs  mod.rs
src/client/cli/: client.rs  io.rs  mod.rs
src/client/web/: client.rs
src/offline_tools/: create_file.rs  edit_file.rs  list_directory.rs  mod.rs  read_file.rs
src/types/: mod.rs  tool.rs  tool_object.rs  toolset.rs
src/types/toolset/: async_toolset.rs  mod.rs  tool_object.rs  toolset.rs
